// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header visual snapshot - custom brand colors: header-custom-brand-colors 1`] = `
"

                         [36m██[39m╗[36m   ██[39m╗ [36m██[39m╗[36m  ██[39m╗ [36m██[39m╗      [36m██[39m╗ [36m███[39m╗[36m   ██[39m╗ [36m████████[39m╗
                         [36m██[39m║[36m   ██[39m║ ╚[36m██[39m╗[36m██[39m╔╝ [36m██[39m║      [36m██[39m║ [36m████[39m╗[36m  ██[39m║ ╚══[36m██[39m╔══╝
                         [36m██[39m║[36m   ██[39m║  ╚[36m███[39m╔╝  [36m██[39m║      [36m██[39m║ [36m██[39m╔[36m██[39m╗[36m ██[39m║ [36m   ██[39m║
                         [36m██[39m║[36m   ██[39m║  [36m██[39m╔[36m██[39m╗  [36m██[39m║      [36m██[39m║ [36m██[39m║╚[36m██[39m╗[36m██[39m║ [36m   ██[39m║
                         ╚[36m██████[39m╔╝ [36m██[39m╔╝[36m ██[39m╗ [36m███████[39m╗ [36m██[39m║ [36m██[39m║ ╚[36m████[39m║ [36m   ██[39m║
                          ╚═════╝  ╚═╝  ╚═╝ ╚══════╝ ╚═╝ ╚═╝  ╚═══╝    ╚═╝



                         [38;2;248;249;250mAI-powered UX review CLI tool for web applications[39m

                       [38;2;173;181;189mGet actionable UX feedback with persona-aware analysis[39m
"
`;

exports[`Header visual snapshot - default theme: header-default-theme 1`] = `
"

                         [36m██[39m╗[36m   ██[39m╗ [36m██[39m╗[36m  ██[39m╗ [36m██[39m╗      [36m██[39m╗ [36m███[39m╗[36m   ██[39m╗ [36m████████[39m╗
                         [36m██[39m║[36m   ██[39m║ ╚[36m██[39m╗[36m██[39m╔╝ [36m██[39m║      [36m██[39m║ [36m████[39m╗[36m  ██[39m║ ╚══[36m██[39m╔══╝
                         [36m██[39m║[36m   ██[39m║  ╚[36m███[39m╔╝  [36m██[39m║      [36m██[39m║ [36m██[39m╔[36m██[39m╗[36m ██[39m║ [36m   ██[39m║
                         [36m██[39m║[36m   ██[39m║  [36m██[39m╔[36m██[39m╗  [36m██[39m║      [36m██[39m║ [36m██[39m║╚[36m██[39m╗[36m██[39m║ [36m   ██[39m║
                         ╚[36m██████[39m╔╝ [36m██[39m╔╝[36m ██[39m╗ [36m███████[39m╗ [36m██[39m║ [36m██[39m║ ╚[36m████[39m║ [36m   ██[39m║
                          ╚═════╝  ╚═╝  ╚═╝ ╚══════╝ ╚═╝ ╚═╝  ╚═══╝    ╚═╝



                         [38;2;226;232;240mAI-powered UX review CLI tool for web applications[39m

                       [38;2;148;163;184mGet actionable UX feedback with persona-aware analysis[39m
"
`;

exports[`Header visual snapshot - fallback theme: header-fallback-theme 1`] = `
"

                         [36m██[39m╗[36m   ██[39m╗ [36m██[39m╗[36m  ██[39m╗ [36m██[39m╗      [36m██[39m╗ [36m███[39m╗[36m   ██[39m╗ [36m████████[39m╗
                         [36m██[39m║[36m   ██[39m║ ╚[36m██[39m╗[36m██[39m╔╝ [36m██[39m║      [36m██[39m║ [36m████[39m╗[36m  ██[39m║ ╚══[36m██[39m╔══╝
                         [36m██[39m║[36m   ██[39m║  ╚[36m███[39m╔╝  [36m██[39m║      [36m██[39m║ [36m██[39m╔[36m██[39m╗[36m ██[39m║ [36m   ██[39m║
                         [36m██[39m║[36m   ██[39m║  [36m██[39m╔[36m██[39m╗  [36m██[39m║      [36m██[39m║ [36m██[39m║╚[36m██[39m╗[36m██[39m║ [36m   ██[39m║
                         ╚[36m██████[39m╔╝ [36m██[39m╔╝[36m ██[39m╗ [36m███████[39m╗ [36m██[39m║ [36m██[39m║ ╚[36m████[39m║ [36m   ██[39m║
                          ╚═════╝  ╚═╝  ╚═╝ ╚══════╝ ╚═╝ ╚═╝  ╚═══╝    ╚═╝



                         [90mAI-powered UX review CLI tool for web applications[39m

                       [90mGet actionable UX feedback with persona-aware analysis[39m
"
`;

exports[`Header visual snapshot - high contrast theme: header-high-contrast-theme 1`] = `
"

                         [93m██[39m╗[93m   ██[39m╗ [93m██[39m╗[93m  ██[39m╗ [93m██[39m╗      [93m██[39m╗ [93m███[39m╗[93m   ██[39m╗ [93m████████[39m╗
                         [93m██[39m║[93m   ██[39m║ ╚[93m██[39m╗[93m██[39m╔╝ [93m██[39m║      [93m██[39m║ [93m████[39m╗[93m  ██[39m║ ╚══[93m██[39m╔══╝
                         [93m██[39m║[93m   ██[39m║  ╚[93m███[39m╔╝  [93m██[39m║      [93m██[39m║ [93m██[39m╔[93m██[39m╗[93m ██[39m║ [93m   ██[39m║
                         [93m██[39m║[93m   ██[39m║  [93m██[39m╔[93m██[39m╗  [93m██[39m║      [93m██[39m║ [93m██[39m║╚[93m██[39m╗[93m██[39m║ [93m   ██[39m║
                         ╚[93m██████[39m╔╝ [93m██[39m╔╝[93m ██[39m╗ [93m███████[39m╗ [93m██[39m║ [93m██[39m║ ╚[93m████[39m║ [93m   ██[39m║
                          ╚═════╝  ╚═╝  ╚═╝ ╚══════╝ ╚═╝ ╚═╝  ╚═══╝    ╚═╝



                         [38;2;0;0;0mAI-powered UX review CLI tool for web applications[39m

                       [38;2;128;128;128mGet actionable UX feedback with persona-aware analysis[39m
"
`;

exports[`Header visual snapshot - monochrome theme: header-monochrome-theme 1`] = `
"

                         [90m██[39m╗[90m   ██[39m╗ [90m██[39m╗[90m  ██[39m╗ [90m██[39m╗      [90m██[39m╗ [90m███[39m╗[90m   ██[39m╗ [90m████████[39m╗
                         [90m██[39m║[90m   ██[39m║ ╚[90m██[39m╗[90m██[39m╔╝ [90m██[39m║      [90m██[39m║ [90m████[39m╗[90m  ██[39m║ ╚══[90m██[39m╔══╝
                         [90m██[39m║[90m   ██[39m║  ╚[90m███[39m╔╝  [90m██[39m║      [90m██[39m║ [90m██[39m╔[90m██[39m╗[90m ██[39m║ [90m   ██[39m║
                         [90m██[39m║[90m   ██[39m║  [90m██[39m╔[90m██[39m╗  [90m██[39m║      [90m██[39m║ [90m██[39m║╚[90m██[39m╗[90m██[39m║ [90m   ██[39m║
                         ╚[90m██████[39m╔╝ [90m██[39m╔╝[90m ██[39m╗ [90m███████[39m╗ [90m██[39m║ [90m██[39m║ ╚[90m████[39m║ [90m   ██[39m║
                          ╚═════╝  ╚═╝  ╚═╝ ╚══════╝ ╚═╝ ╚═╝  ╚═══╝    ╚═╝



                         [38;2;204;204;204mAI-powered UX review CLI tool for web applications[39m

                       [38;2;136;136;136mGet actionable UX feedback with persona-aware analysis[39m
"
`;
